[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/HUD.gd" id="1_hud"]
[ext_resource type="Script" path="res://scenes/ui/ModulePanel.gd" id="2_panel"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="FollarsLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Ф: 0"

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Волна: 1"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "00:00"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SlotsLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Слоты: 4/4"

[node name="Separator" type="VSeparator" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2

[node name="ModulePanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12
script = ExtResource("2_panel")
